// Protobuf interface of the neon service.
//
// Copyright (c) 2022 Wibowo Arindrarto <contact@arindrarto.dev>
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package neon;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bow/neon/api";

service Neon {
  // AddFeeds adds a new feed source.
  rpc AddFeed (AddFeedRequest) returns (AddFeedResponse) {}

  // EditFeeds sets one or more fields of feeds.
  rpc EditFeeds (EditFeedsRequest) returns (EditFeedsResponse) {}

  // ListFeeds lists all added feed sources.
  rpc ListFeeds (ListFeedsRequest) returns (ListFeedsResponse) {}

  // PullFeeds checks feeds for updates and returns all unread entries.
  rpc PullFeeds (PullFeedsRequest) returns (stream PullFeedsResponse) {}

  // DeleteFeeds removes one or more feed sources.
  rpc DeleteFeeds (DeleteFeedsRequest) returns (DeleteFeedsResponse) {}

  // ListEntries lists entries of a specific feed.
  rpc ListEntries (ListEntriesRequest) returns (ListEntriesResponse) {}

  // EditEntries sets one or more fields of an entry.
  rpc EditEntries (EditEntriesRequest) returns (EditEntriesResponse) {}

  // GetEntry returns the content of an entry.
  rpc GetEntry (GetEntryRequest) returns (GetEntryResponse) {}

  // ExportOPML exports feed subscriptions as an OPML document.
  rpc ExportOPML (ExportOPMLRequest) returns (ExportOPMLResponse) {}

  // ImportOPML imports an OPML document.
  rpc ImportOPML (ImportOPMLRequest) returns (ImportOPMLResponse) {}

  // GetStats returns various statistics of the feed subscriptions.
  rpc GetStats (GetStatsRequest) returns (GetStatsResponse) {}

  // GetInfo returns the version info of the running server.
  rpc GetInfo (GetInfoRequest) returns (GetInfoResponse) {}
}

message Feed {
  uint32 id = 1;
  string title = 2;
  string feed_url = 3;
  repeated string tags = 4;
  optional string site_url = 5;
  optional string description = 6;
  optional google.protobuf.Timestamp update_time = 7;
  google.protobuf.Timestamp sub_time = 8;
  google.protobuf.Timestamp last_pull_time = 9;
  bool is_starred = 10;
  repeated Entry entries = 15;
}

message Entry {
  uint32 id = 1;
  uint32 feed_id = 2;
  string title = 3;
  bool is_read = 4;
  bool is_bookmarked = 5;
  string ext_id = 6;
  google.protobuf.Timestamp update_time = 7;
  google.protobuf.Timestamp pub_time = 8;
  optional string description = 9;
  optional string content = 10;
  optional string url = 11;
}

message AddFeedRequest {
  string url = 1;
  optional string title = 2;
  optional string description = 3;
  repeated string tags = 4;
  optional bool is_starred = 5;
}

message AddFeedResponse {
  Feed feed = 1;
  bool is_added = 2;
}

message EditFeedsRequest {
  repeated Op ops = 1;

  message Op {
    uint32 id = 1;
    Fields fields = 2;

    message Fields {
      optional string title = 1;
      optional string description = 2;
      // NOTE: This means an empty fields message in an op request will delete
      //       existing tags.
      repeated string tags = 3;
      optional bool is_starred = 4;
    }
  }
}

message EditFeedsResponse {
  repeated Feed feeds = 1;
}

message ListFeedsRequest {}

message ListFeedsResponse {
  repeated Feed feeds = 1;
}

message PullFeedsRequest {
  repeated uint32 feed_ids = 1;
  bool return_all_entries = 2;
}

message PullFeedsResponse {
  string url = 1;
  optional Feed feed = 2;
  optional string error = 3;
}

message DeleteFeedsRequest {
  repeated uint32 feed_ids = 1;
}

message DeleteFeedsResponse {}

message ListEntriesRequest {
  repeated uint32 feed_ids = 1;
  optional bool is_bookmarked = 2;
}

message ListEntriesResponse {
  repeated Entry entries = 1;
}

message EditEntriesRequest {
  repeated Op ops = 1;

  message Op {
    uint32 id = 1;
    Fields fields = 2;

    message Fields {
      optional bool is_read = 1;
      optional bool is_bookmarked = 2;
    }
  }
}

message EditEntriesResponse {
  repeated Entry entries = 1;
}

message GetEntryRequest {
  uint32 id = 1;
}

message GetEntryResponse {
  Entry entry = 1;
}

message ExportOPMLRequest {
  optional string title = 1;
}

message ExportOPMLResponse {
  bytes payload = 1;
}

message ImportOPMLRequest {
  bytes payload = 1;
}

message ImportOPMLResponse {
  uint32 num_processed = 1;
  uint32 num_imported = 2;
}

message GetStatsRequest {}

message GetStatsResponse {
  optional Stats global = 1;

  message Stats {
    uint32 num_feeds = 1;
    uint32 num_entries = 2;
    uint32 num_entries_unread = 3;
    optional string tag = 4;
    optional google.protobuf.Timestamp last_pull_time = 5;
    optional google.protobuf.Timestamp most_recent_update_time = 6;
  }
}

message GetInfoRequest {}

message GetInfoResponse {
  string name = 1;
  string version = 2;
  string git_commit = 3;
  string build_time = 4;
}
